--- a/problem_set_1.ipynb
+++ b/problem_set_1.ipynb
@@ -9,7 +9,9 @@
     "# Import packages\n",
     "\n",
     "import pandas as pd\n",
-    "import altair as alt"
+    "import numpy as np\n",
+    "import altair as alt\n",
+    "alt.data_transformers.disable_max_rows()"
    ]
   },
   {
@@ -20,7 +22,8 @@
    "source": [
     "# Load traffic stops data and create a dataframe called stops\n",
     "# and check the columns and their types\n",
-    "\n"
+    "stops = pd.read_csv('Officer_Traffic_Stops.csv')\n",
+    "stops.head()"
    ]
   },
   {
@@ -29,7 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# view the data by just typing the dataframe name\n"
+    "# view the data by just typing the dataframe name\n",
+    "stops"
    ]
   },
   {
@@ -38,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check the data using df.info()"
+    "# check the data using df.info()\n",
+    "stops.info()"
    ]
   },
   {
@@ -58,7 +63,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Bar chart"
+    "## Bar chart\n",
+    "bar = alt.Chart(stops).mark_bar(size=30).encode(\n",
+    "    x=alt.X('Was_a_Search_Conducted', axis=alt.Axis(title='Was a Search Conducted')),\n",
+    "    y=alt.Y('count()', axis=alt.Axis(title='Count')),\n",
+    "    color=alt.Color('Was_a_Search_Conducted', scale=alt.Scale(domain=['Yes', 'No'], range=['steelblue', 'lightgray'])),\n",
+    "    )\n",
+    "\n",
+    "bar"
    ]
   },
   {
@@ -76,7 +88,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Histogram"
+    "## Histogram\n",
+    "histogram = alt.Chart(stops).mark_bar(tooltip=True).encode(\n",
+    "    alt.X(\"Driver_Age:Q\", bin=alt.Bin(maxbins= 50)),\n",
+    "    y='count()',\n",
+    ")\n",
+    "\n",
+    "histogram"
    ]
   },
   {
@@ -85,7 +103,9 @@
    "source": [
     "Once you go above (around) 40-50 bins, you'll notice some points stick out. \n",
     "\n",
-    "What is happening? xxxxx"
+    "What is happening?\n",
+    "\n",
+    "The data gathered into each bin consists of more than one year."
    ]
   },
   {
@@ -101,7 +121,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Box plot"
+    "## Box plot\n",
+    "\n",
+    "box_plot = alt.Chart(stops).mark_boxplot().encode(\n",
+    "    x='Was_a_Search_Conducted',\n",
+    "    y='Driver_Age',\n",
+    "    color=alt.Color('Was_a_Search_Conducted', scale=alt.Scale(domain=['Yes', 'No'], range=['steelblue', 'lightgray'])),\n",
+    "\n",
+    ")\n",
+    "\n",
+    "box_plot"
    ]
   },
   {
@@ -117,14 +146,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Violin plot"
+    "# Violin plot\n",
+    "\n",
+    "\n",
+    "\n",
+    "violin = alt.Chart(stops).transform_density(\n",
+    "    'Driver_Age',  \n",
+    "    as_=['Driver_Age', 'density'],\n",
+    "    groupby=['Was_a_search_conducted']\n",
+    ").mark_area(\n",
+    "    orient='horizontal'\n",
+    ").encode(\n",
+    "    y=alt.Y('Driver_Age:Q'), \n",
+    "    color='Was_a_search_conducted:N',\n",
+    "    x=alt.X(\n",
+    "        'density:Q',\n",
+    "        stack='center'\n",
+    "    )\n",
+    ").properties(\n",
+    "    width=300,\n",
+    "    height=300\n",
+    ")\n",
+    "\n",
+    "violin\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the plots above, do you think the age of the driver is a significant factor in whether a search was conducted? Why or why not? xxxxx"
+    "From the plots above, do you think the age of the driver is a significant factor in whether a search was conducted? Why or why not?\n",
+    "\n",
+    "No, it seems that driver age isn't a major factor because search frequency is fairly consistent across all age groups. "
    ]
   },
   {
@@ -146,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#stops['Month_of_Stop'] = stops['Month_of_Stop'].astype('datetime64[ns]')"
+    "stops['Month_of_Stop'] = stops['Month_of_Stop'].astype('datetime64[ns]')"
    ]
   },
   {
@@ -155,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#stops['Month_of_Stop'] = pd.to_datetime(stops['Month_of_Stop'], format='%y%m%d')"
+    "stops['Month_of_Stop'] = pd.to_datetime(stops['Month_of_Stop'], format='%y%m%d')"
    ]
   },
   {
@@ -164,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#stops.info()"
+    "stops.info()"
    ]
   },
   {
@@ -173,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#stops"
+    "stops"
    ]
   },
   {
@@ -191,7 +244,8 @@
    "source": [
     "## Create a dataframe named stops_count for this graph that has a column named Month_of_Stop \n",
     "## Also create a column named count representing the ammount of stops per month  https://sparkbyexamples.com/pandas/pandas-groupby-count-examples/\n",
-    "\n"
+    "stops_count = stops.groupby('Month_of_Stop').size().reset_index(name='count')\n",
+    "stops_count\n"
    ]
   },
   {
@@ -201,14 +255,22 @@
    "outputs": [],
    "source": [
     "## Line chart\n",
-    "\n"
+    "\n",
+    "line = alt.Chart(stops_count).mark_line().encode(\n",
+    "    x='Month_of_Stop',\n",
+    "    y='count'\n",
+    ")\n",
+    "\n",
+    "line\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the trend (i.e., long term rate of change) of the number of traffic stops in Charlotte? xxxxx"
+    "What is the trend (i.e., long term rate of change) of the number of traffic stops in Charlotte? \n",
+    "\n",
+    "It seems that the number of monthly stops are consistent over time. We notice some decrease and increase but on average it seems that it's consistent and averaging around 2800."
    ]
   },
   {
@@ -225,7 +287,8 @@
    "outputs": [],
    "source": [
     "## create the dataframe that groups by month and reason for stop \n",
-    "\n"
+    "stops_reason = stops.groupby(['Month_of_Stop', 'Reason_for_Stop']).size().reset_index(name='count')\n",
+    "stops_reason\n"
    ]
   },
   {
@@ -234,14 +297,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Facet chart https://stackoverflow.com/questions/64770801/python-altair-facet-line-plot-with-multiple-variables\n"
+    "## Facet chart https://stackoverflow.com/questions/64770801/python-altair-facet-line-plot-with-multiple-variables\n",
+    "\n",
+    "lines = alt.Chart(stops_reason).mark_line().encode(\n",
+    "    x='Month_of_Stop',\n",
+    "    y='count',\n",
+    "    color='Reason_for_Stop',\n",
+    "    tooltip=['Month_of_Stop', 'count', 'Reason_for_Stop']\n",
+    ").facet(\n",
+    "    column='Reason_of_Stop:N'\n",
+    ")\n",
+    "\n",
+    "lines"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is a problem with this plot? xxxxx"
+    "What is a problem with this plot? \n",
+    "\n",
+    "The y-axis seems to be shared across different reasons for stops."
    ]
   },
   {
@@ -252,7 +328,9 @@
     "\n",
     "https://altair-viz.github.io/user_guide/scale_resolve.html\n",
     "\n",
-    "What parameter allows you to modify the scales of `facet_wrap`? xxxxx"
+    "What parameter allows you to modify the scales of `facet_wrap`? \n",
+    "\n",
+    "'resolve_scale'"
    ]
   },
   {
@@ -268,14 +346,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Updated Facet Chart"
+    "# Updated Facet Chart\n",
+    "updated_lines = alt.Chart(stops_reason).mark_line().encode(\n",
+    "    x='Month_of_Stop',\n",
+    "    y='count',\n",
+    "    color='Reason_for_Stop',\n",
+    "    tooltip=['Month_of_Stop', 'count', 'Reason_for_Stop']\n",
+    "\n",
+    ").facet(\n",
+    "        column='Reason_for_Stop:N'\n",
+    "    ).resolve_scale(\n",
+    "    y='independent'\n",
+    ")\n",
+    "\n",
+    "updated_lines"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which type of police stop has had the most volatility (i.e., big swings in number of stops)? xxxxx"
+    "Which type of police stop has had the most volatility (i.e., big swings in number of stops)? \n",
+    "\n",
+    "Driving While Impaired"
    ]
   },
   {
@@ -302,7 +395,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Facet plot for division stops"
+    "# Facet plot for division stops\n",
+    "stops_division = stops.groupby(['Month_of_Stop', 'CMPD_Division']).size().reset_index(name='count')\n",
+    "\n",
+    "division_lines = alt.Chart(stops_division).mark_line().encode(\n",
+    "    x='Month_of_Stop',\n",
+    "    y='count',\n",
+    "    color='CMPD_Division',\n",
+    "    tooltip=['Month_of_Stop', 'CMPD_Division']\n",
+    "\n",
+    ").facet(\n",
+    "        column='CMPD_Division:N'\n",
+    "    ).resolve_scale(\n",
+    "    y='independent'\n",
+    ")\n",
+    "\n",
+    "division_lines"
    ]
   },
   {
@@ -311,11 +419,11 @@
    "source": [
     "What are three observations you can make about the number of police stops by divison? (hint: just write about what's in the data.)\n",
     "\n",
-    "1. xxxxx\n",
+    "1. The number of stops across all divisions dramitacally increased after October 1, 2016.\n",
     "\n",
-    "2. xxxxx\n",
+    "2. After April 1, 2017 stops started to decrease across all divisions\n",
     "\n",
-    "3. xxxxx"
+    "3. Most divisions have around 200 stops per month."
    ]
   }
  ],
